--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,11 +8,9 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - master
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ $default-branch ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -25,6 +23,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    outputs:
+      image_name: ${{ steps.meta.outputs.tags }}
     permissions:
       contents: read
       packages: write
@@ -72,3 +72,20 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_a553084ece9e4846b9201486ab46a4c2 }}
+        images: '${{ needs.build.outputs.image_name }}'
